2006-08-13  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tests/ns_proxy.test: Test for [ns_proxy handles ?pool?]
	* nsproxy/nsproxylib.c: Fixed PushProxy() to honour 
	proxies without associated slave to be set for expiration.

	* nsd/log.c: Rewritten caching of log entries to use 
	separate caches for entry structures and log texts.
	Attempt to stuff both in a dynamic string and cast
	when needed did not work on some architectures because
	of padding/alignment requirements.

2006-08-12  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Removed Ns_Log calls outside the
	global locks in ReaperThread as this may lead to deadlocks
	in Ns_ProxyInit() when somebody registered Tcl callbacks
	to the ns_log facility. If the current thread has never
	loaded an Tcl interpreter (and the reaper thread does not
	do that explicitly) one will be loaded at the latest at 
	that point when first call to Ns_Log has been made and 
	there is a Tcl callback registered. In this scenario, the
	Ns_ProxyInit will be called by the server Tcl tracing
	facility and this will lock the global proxy lock. If at
	that time somebody is already holding the global lock, 
	we'll have a deadlock.

2006-08-04  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Improved teardown of nsproxy
	at process exit. Fixed teardown of idle proxies.
	Increased default max. count of proxies per pool to 8.
        Added ns_log's to monitor nsproxy teardown steps.

2006-08-03  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsproxy/nsproxylib.c: Define 30 seconds grace period
	to wait for proxies cleanup on application exit.
	Always use wrappers when operating on Tcl/Ns Dstrings.
	The Ns_ProxyMain explicitly calls Tcl_FindExectuable()
	so the default encoding is properly set. Otherwise troubles
	arise when sending scripts containing paths which in turn
	contain special multinational characters.