@@ -1,3 +1,8 @@
+2006-08-14  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
+
+	* include/ns.h: Added definitions for poll() emulation
+	under Windows, as we do not include poll.h there.
+
 2006-08-13  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
 
 	* tests/ns_proxy.test: Test for [ns_proxy handles ?pool?]
